tests/reference/asr-incorrect_type_where_04-f7dffdb.stderr
semantic error: 'where' clause requires a logical array
  --> tests/errors/incorrect_type_where_04.f90:11:10
   |
11 |    where(c) b = 12121
   |          ^ 
